fix visibility product

--- a/AngularArmetiss/src/app/gestion-ventes/list-product/list-product.component.css
+++ b/AngularArmetiss/src/app/gestion-ventes/list-product/list-product.component.css
@@ -1,7 +1,10 @@
 .card{
-  width: 260px;
+  min-width: 300px;
+  min-height: 40vh;
   margin:3%;
   border: black solid 1px;
+  margin: 20px 20px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.5);
 }
 
 .nav-bar{
@@ -56,7 +59,7 @@ div img{
 .box{
   width: 70%;
 }
-@media screen and (max-width: 1020px) {
+@media screen and (max-width: 1100px) {
   .box{
     width: 59%;
   }
@@ -125,6 +128,8 @@ table{
   margin-top: 10%;
   border: #232b42 groove 1px;
   border-radius: 5px;
+  background-color: #f2f2f2;
+  box-shadow: 0 0 10px rgba(0,0,0,0.5);
 
 }
 
